Force: update tests.